--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prettier": "^1.19.1",
+    "randexp": "^0.5.3",
     "react-scripts": "^1.0.7",
     "resolve-url-loader": "3.1.0",
     "sass-loader": "7.2.0",
