--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "@babel/preset-react": "^7.13.13",
     "@babel/register": "^7.13.14",
     "@cucumber/cucumber": "^7.0.0",
+    "@d4c/numjs": "^0.17.34",
     "@storybook/addon-actions": "^6.3.12",
     "@storybook/addon-essentials": "^6.3.12",
     "@storybook/addon-links": "^6.3.12",
@@ -105,7 +106,7 @@
     "body-parser": "^1.19.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "chai": "^4.3.4",
-    "chromedriver": "^97.0.0",
+    "chromedriver": "^98.0.0",
     "crypto": "^1.0.1",
     "css-loader": "2.1.1",
     "cucumber-html-reporter": "^5.3.0",
@@ -132,6 +133,7 @@
     "mini-css-extract-plugin": "0.8.0",
     "node-sass": "^4.13.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
+    "pandas-js": "^0.2.4",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
